--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@repo/db": "workspace:*",
     "@types/body-parser": "^1.19.6",
+    "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^17.2.2",
     "express": "^5.1.0"
